src/assets/main.css
@import 'font-face.css';

@tailwind base;
@tailwind components;
@tailwind utilities;
/*! @import */

:root {
    --swiper-navigation-color: white;
    --swiper-navigation-size: 10px;
}

body {
    overflow: auto;
    -ms-overflow-style: none; /* IE 11 */
    scrollbar-width: none; /* Firefox 64 */
}

::-webkit-scrollbar {
    width: 0; /* Remove scrollbar space */
    background: transparent; /* Optional: just */
}


.modal {
    transition: opacity 0.5s ease;
}

.modal-open {
    filter: blur(3px);
    -webkit-filter: blur(3px);
    -moz-filter: blur(3px);
}

.modal-close {
    filter: none;
}

body {
    font-family: 'Lato', sans-serif;
    font-style: normal;
}

